--- a/index.html
+++ b/index.html
@@ -1,62 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/jpeg" sizes="80x80" href="imgs/logo.jpg"/>
-    <title>Loading</title>
+    <link rel="icon" type="image/jpeg" sizes="80x80" href="imgs/logo.jpg" />
+    <title>书签导航页</title>
     <style type="text/css">
-        .root {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin: auto;
-            width: 200px;
-            height: 200px;
+        .custom-control-input,
+        .custom-control-label {
+            cursor: pointer;
         }
 
-        .load {
-            margin: 20px auto;
-            width: 100px;
-            height: 100px;
-            border: 5px white solid;
-            border-left-color: #ff5500;
-            border-right-color: #0c80fe;
-            border-radius: 100%;
-            animation: loading1 3s infinite linear;
+        .link {
+            cursor: pointer;
         }
 
-        @keyframes loading1 {
-            from {
-                transform: rotate(0deg)
-            }
-            to {
-                transform: rotate(360deg)
-            }
-        }
-
-        .load-tip {
-            text-align: center;
-            font-weight: bolder;
-            font-family: cursive;
+        .title-align-sub {
+            vertical-align: sub;
         }
     </style>
 </head>
+
 <body>
-<div class="root">
-    <div class="load"></div>
-    <div class="load-tip">正在加载...</div>
-</div>
-<script>
-    const storage_login = "login-state";
-    let loginStorageData = localStorage.getItem(storage_login);
-    if (loginStorageData) {
-        window.location.href = "/nav.html";
-    }else {
-        window.location.href = "/login.html";
-    }
-</script>
+
+    <div id="root" class="container-fluid overflow-hidden" style="padding: 0">
+
+        <yanhui-header title="Bookmarks" icon="chrome" :actions="actions"></yanhui-header>
+
+        <div class="mx-2 mt-3" style="overflow: hidden">
+
+            <input v-model="searchTxt" class="form-control mr-sm-2" type="search" placeholder="搜索书签..."
+                aria-label="Search" @keyup.enter="search" />
+            <div class="alert alert-success mt-3" role="alert">
+                <span class="font-weight-bold">分类：</span>
+                <div class="custom-control custom-radio custom-control-inline m-1 mr-2" v-for="type in bmTypeList">
+                    <input @click="typeClick(type)" v-model="checkedType" :value="type" type="radio" :id="'id_'+type"
+                        name="bmType" class="custom-control-input" />
+                    <label class="custom-control-label" :for="'id_'+type">{{type}}</label>
+                </div>
+            </div>
+
+            <div class="alert alert-info" role="alert" v-show="bmTagList && bmTagList.length>0">
+                <span class="font-weight-bold">标签：</span>
+                <div class="custom-control custom-radio custom-control-inline m-1 mr-2" v-for="tag in bmTagList">
+                    <input @click="tagClick(tag)" v-model="checkedTag" :value="tag.name" type="radio"
+                        :id="'id_'+tag.name" name="bmTag" class="custom-control-input">
+                    <label class="custom-control-label" :for="'id_'+tag.name">{{tag.name}}</label>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="p-2 d-flex flex-row flex-wrap justify-content-center link">
+            <a v-for="bm in bmList" target="_blank" :href="bm.c" :title="bm.b+'\n'+bm.c"
+                class="overflow-hidden bg-light m-2 p-3 list-group-item-action col-12 col-md-6 col-lg-3 mt-2 link">
+                <div class="d-flex w-100 justify-content-between text-nowrap">
+                    <span class="mb-1 h6">{{bm.b}}</span>
+                </div>
+                <small>
+                    <span class="badge badge-success">{{bm.type}}</span>
+                    <span class="badge badge-info">{{bm.tag}}</span>
+                </small>
+                <label class="mb-1 text-info text-nowrap">{{bm.c}}</label>
+            </a>
+        </div>
+
+    </div>
+
+    <script src="/cdn/vue/vue.min.js"></script>
+    <script src="/cdn/axios.min.js"></script>
+    <script src="/cdn/bootstrap/jquery.slim.min.js"></script>
+    <script src="/cdn/bootstrap/bootstrap.min.js"></script>
+
+    <!-- 业务js在 /js/ 目录下，默认与页面名称相同 -->
+    <script src="/js/appInit-min.js"></script>
+
+    <link rel="stylesheet" href="/cdn/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="/cdn/font-awesome-4.7.0/css/font-awesome.min.css" />
+
 </body>
+
 </html>
