--- a/pages/fileEditor.html
+++ b/pages/fileEditor.html
@@ -18,7 +18,7 @@
 
     <div id="root">
 
-        <yanhui-header title="Monaco Editor" :actions="actions">
+        <yanhui-header title="Monaco Editor" :actions="actions" icon="file-code-o">
             <div slot="headerRight">
                 <span class="text-truncate">
                     {{selectedFile ? `正在编辑 ${selectedFile}` : '请选择编辑文件...'}}
